[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/MySlider.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/OptionSwitcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/MyButton.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/blue_title_panel.tres" type="StyleBox" id=5]
[ext_resource path="res://src/ui/DebugScreen.gd" type="Script" id=6]

[node name="DebugScreen" type="Control" groups=["network_sync"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -103.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 25.0
margin_top = 6.0
margin_right = 1055.0
margin_bottom = 492.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1030.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Debug"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
margin_top = 79.0
margin_right = 1030.0
margin_bottom = 417.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer"]
margin_right = 1030.0
margin_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
columns = 2

[node name="HealthLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_right = 513.0
margin_bottom = 51.0
size_flags_horizontal = 3
text = "Health"

[node name="HealthSlider" type="HSlider" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 517.0
margin_top = 9.0
margin_right = 1030.0
margin_bottom = 51.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 12
min_value = 1.0
step = 10.0
value = 100.0
script = ExtResource( 1 )

[node name="InvincibleLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 68.0
margin_right = 513.0
margin_bottom = 119.0
text = "Invincible"

[node name="InvincibleOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 517.0
margin_top = 61.0
margin_right = 1030.0
margin_bottom = 127.0

[node name="WeaponLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 144.0
margin_right = 513.0
margin_bottom = 195.0
text = "Weapon"

[node name="WeaponOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 517.0
margin_top = 137.0
margin_right = 1030.0
margin_bottom = 203.0

[node name="AbilityLabel" type="Label" parent="Panel/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 220.0
margin_right = 513.0
margin_bottom = 271.0
text = "Ability"

[node name="AbilityOptions" parent="Panel/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 517.0
margin_top = 213.0
margin_right = 1030.0
margin_bottom = 279.0

[node name="DoneButton" type="Button" parent="Panel/VBoxContainer"]
margin_left = 440.0
margin_top = 421.0
margin_right = 590.0
margin_bottom = 486.534
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
text = "Done"
script = ExtResource( 4 )

[connection signal="value_changed" from="Panel/VBoxContainer/ScrollContainer/GridContainer/HealthSlider" to="." method="_on_HealthSlider_value_changed"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/InvincibleOptions" to="." method="_on_InvincibleOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/WeaponOptions" to="." method="_on_WeaponOptions_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScrollContainer/GridContainer/AbilityOptions" to="." method="_on_AbilityOptions_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
